--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/clipboard": "^2.0.7",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "clipboard": "^2.0.11",
     "craco-alias": "^3.0.1",
     "dotenv": "^16.3.1",
     "html-webpack-plugin": "^5.5.3",
