--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-* linguist-vendored
+*.html linguist-detectable=false
 *.tsx linguist-language=TypeScript
 public/index.html linguist-generated=true
